app/assets/stylesheets/partials/_map.scss
.row {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.map-results ul li {
    margin-bottom: 15px;

    .list-colored {
        color: #81dde1;
    }

    a.result-website {
        text-decoration: underline;
    }
}

.result-number {}

.result-website {}

.map-container {
    @include bp(mobile) {
        width: 90%;
        height: 150px;
        margin-top: 30px;
        margin-bottom: 265px;
    }
    @include bp(small) {
        width: 600px;
        height: 300px;
        margin-top: 75px;
        margin-bottom: 120px;
    }
}

.list-styled {
    .list-colored a {
        color: $mainColor;
    }

    .list-underlined a {
        text-decoration: underline;
    }
}

.loading {
    position: absolute;
    top: 50%;
    left: 50%;
    margin: -40px 0 0 -40px;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    border: 15px solid $mainColor;
    border-top-color: $darkAccentTeal;
    animation: spin 1s infinite linear;
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

